--- a/memory-game/styles/memory.css
+++ b/memory-game/styles/memory.css
@@ -1,14 +1,91 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;500;600;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;500;600;900&display=swap");
 
 * {
-    padding: 0;
+padding: 0;
     margin: 0;
     box-sizing: border-box;
     font-family: poppins;
 }
 
 body {
-    background: url('../assets/Animated\ Shape.svg');
+background: url("../../assets/Animated\ Shape.svg");
     width: 100vw;
     height: 100vh;
+display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+header {
+    font-size: 30px;
+    color: rgba(211, 142, 14, 0.874);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20px 0;
+}
+
+.game {
+    display: grid;
+    grid-template-columns: repeat(3, 0fr);
+    grid-template-rows: repeat(4, 0fr);
+    grid-row-gap: 20px;
+    place-content: center;
+    /* height: 80%; */
+    justify-content: center;
+    grid-column-gap: 20px;
+    background: #254075;
+    width: fit-content;
+    padding: 30px;
+    perspective: 500px;
+    border-radius: 10px;
+    border: 3px solid rgba(211, 142, 14, 0.874);
+}
+
+.card {
+    position: relative;
+    height: 150px;
+    border: 1px solid #5c73a2;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+    aspect-ratio: 1/1;
+    border-radius: 10px;
+    cursor: pointer;
+    transform-style: preserve-3d;
+    transform-origin: center right;
+    transition: transform 0.5s ease-in-out;
+    perspective: 600px;
+    background: #2f4c85;
+}
+
+.card.flipped {
+    transform: translateX(-100%) rotateY(-180deg);
+}
+
+.card__face {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    line-height: 260px;
+    color: white;
+    text-align: center;
+    font-weight: bold;
+    font-size: 40px;
+    backface-visibility: hidden;
+}
+
+.front {
+    background: #2f4c85;
+    transform: rotateY(180deg);
+}
+
+.card img {
+    height: 100%;
+    max-width: 100%;
+    object-fit: contain;
+    user-select: none;
+    -webkit-user-drag: none;
 }
