--- a/styles/styles.css
+++ b/styles/styles.css
@@ -63,6 +63,7 @@ a {
     width: 400px;
     text-align: center;
     transition: transform 200ms ease-in-out;
+    box-shadow: 0 4px 8px #0002;
 }
 
 .memory-game:hover,
@@ -79,4 +80,6 @@ a {
 .game-preview {
     height: 200px;
     border-radius: 10px;
+    border: 1px solid white;
+    box-shadow: 0 4px 8px #0002;
 }
